# lexical_and_syntax_analyzer

./: .gitignore  CMakeLists.txt  README.md
include/: Lexer.h  Parser.h  Token.h  file_toolkit.h  persian_toolkit.h
src/: Lexer.cpp  Parser.cpp  Token.cpp  file_toolkit.cpp  main.cpp  persian_toolkit.cpp
